Added JUnit4 test cases